Moved Main Div CSS to Main file and Set Min widths to avoid layout shifts

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -13,11 +13,17 @@
   padding-left: 0.5rem;
 }
 
+.statusDiv {
+  width: 35%;
+  min-width: 35%;
+}
+
 .twitchDiv {
   display: flex;
   flex-direction: column;
   padding: 0 1rem 0 1rem;
   width: 45%;
+  min-width: 45%;
   border-left: 3px solid whitesmoke;
   padding-bottom: 10px;
 }
