--- a/src/components/status.module.css
+++ b/src/components/status.module.css
@@ -1,7 +1,3 @@
-.statusDiv {
-  width: 35%;
-}
-
 .pageTitleReplyYes{
   font-size: 1.8rem;
   padding-block: 0.25rem;
